--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ version = "0.0.1"
 description = "Network Model Executor Allows to process data over the network"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = ["psutil", "opencv-python"]
+dependencies = [
+    "psutil",
+    "opencv-python",
+    "yolo9"
+]
 
 [project.scripts]
 nmexec = "nmexec.__main__:main"
