--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,6 @@ Build-Depends: debhelper-compat (= 13), python3, python3.11, dh-python, python3-
 
 Package: nmexec
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}, python3.11
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}, python3.11, python3.11-venv
 Description: A Network Model Executor
  This package installs nmexec and sets up a systemd service.
