--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.11"
 dependencies = [
     "psutil",
     "opencv-python",
-    "yolo9"
+    "yolo9>=1.0.8"
 ]
 
 [project.scripts]
